devops-labs/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-labs-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: devops-labs-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-012e2e1c02674cd61,subnet-0b7b0dc07d79a9b29
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
